# PS_TASK_3

./: .gitmodules  CMakeLists.txt  README.md  button.cpp  button.h  main.cpp  textbox.cpp  textbox.h
.github/workflows/: ccpp.yml
engine/: CMakeLists.txt  SwitcherEngine.cpp
libraries/: CMakeLists.txt
libraries/engine/: CMakeLists.txt  SwitcherEngine.cpp  SwitcherEngine.hpp
libraries/graphic/: CMakeLists.txt  Dimension.cpp  Point.cpp  Point.h
libraries/graphic/components/: CMakeLists.txt
libraries/graphic/components/button/: CMakeLists.txt  button.cpp  button.h
libraries/graphic/components/clickable/: CMakeLists.txt  clickable.cpp  clickable.h
libraries/graphic/components/component/: CMakeLists.txt  component.h
libraries/graphic/components/drag_n_drop/: CMakeLists.txt  drag_n_drop.cpp  drag_n_drop.h
libraries/graphic/components/frame/: CMakeLists.txt  frame.cpp  frame.h
libraries/graphic/components/label/: CMakeLists.txt  label.cpp  label.h
libraries/graphic/components/lbutton/: CMakeLists.txt  lbutton.cpp  lbutton.h
libraries/graphic/components/rectangle_component/: CMakeLists.txt  rectangle_component.cpp  rectangle_component.h
libraries/graphic/components/window/: CMakeLists.txt  window.cpp  window.h
libraries/graphic/components/wrapper/: CMakeLists.txt  wrapper.cpp  wrapper.h
libraries/graphic/include/: Dimension.h  Point.h  config.hpp
libraries/submodules/: CMakeLists.txt
libraries/utility/: CMakeLists.txt  Property.cpp  Property.hpp
tests/: CMakeLists.txt  SneakyPointerTest.cpp  SwitcherEngineTest.cpp  Testers.hpp
